# whatdoyouwant

./: CMakeLists.txt
client/: .gitignore  CMakeLists.txt  build-native.sh  build-web.sh
client/src/: main.cpp  stuff.cpp  stuff.h
server/: CMakeLists.txt  build.sh
server/src/: main.cpp  test.http
